Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100283

"Video" keep sending positionChanged signal

    XMLWordPrintable

Details

    • Windows
    • a997f2cee2 (qt/qtmultimedia/dev) 50ed1bf98f (qt/qtmultimedia/6.3) 9a51dcd2ee (qt/qtmultimedia/6.2) 9a51dcd2ee (qt/tqtc-qtmultimedia/6.2)

    Description

      Using QML "Video" player, after pause()  and then seek to a new position by: position=1234.

      Sometimes the positionChanged signal will repeatedly be generated forever with the same value.

       

      Attachments

        For Gerrit Dashboard: QTBUG-100283
        # Subject Branch Project Status CR V

        Activity

          People

            anrocha André De La Rocha (Inactive)
            atopaz Albert Yang
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes