Windows: Fix player sending same position multiple times

Under some conditions the player would keep sending the same position
update notification multiple times.

Fixes: QTBUG-100283
Pick-to: 6.2 6.3
Change-Id: I6968b5e76794cf055b5bd6c4703f5a4fc68ae544
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>